adicionado crud dos carros, pontos turisticos, pacotes turisticos, implementado docker (Dockerfile e compose), e etc...
