# apps/backend-api/src/routes/user/router.ts
@@ -1,10 +1,12 @@
 import express, { Router } from "express";
-import { loginUser, userRegistration } from "../../controllers/user/auth.controller";
+import { loginUser, userRegistration, updateUser, deleteUser, getUserById } from "../../controllers/user/auth.controller";
 
 const userRouter: Router = express.Router();
 
-userRouter.post('/user-registration', userRegistration);
-
-userRouter.post('/user-login', loginUser);
+userRouter.post('/registration', userRegistration);
+userRouter.post('/login', loginUser);
+userRouter.put('/:userId', updateUser);
+userRouter.delete('/:userId', deleteUser);
+userRouter.get('/:userId', getUserById);
 
 export default userRouter;
